--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Michael Sylvester <mike.k.sylvester@gmail.com>
